# datafusion-bio-formats

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  ISSUE_54_ANALYSIS.md  LICENSE  README.md  WRITE_SUPPORT_SUMMARY.md  rustfmt.toml
benchmarks/common/: Cargo.toml
benchmarks/common/src/: data_downloader.rs  harness.rs  lib.rs
benchmarks/runner/: Cargo.toml
benchmarks/runner/src/: main.rs
datafusion/bio-format-bam/: Cargo.toml  README.md
datafusion/bio-format-bam/examples/: benchmark_read.rs  describe_bam_schema.rs  test_bam_reader.rs  test_bam_with_tags.rs  test_reader.rs  write_bam.rs
datafusion/bio-format-bam/src/: header_builder.rs  lib.rs  physical_exec.rs  serializer.rs  storage.rs  table_provider.rs  tag_registry.rs  write_exec.rs  writer.rs
datafusion/bio-format-bam/tests/: bam_with_tags.bam  bam_with_tags.bam.bai  indexed_read_10x_test.rs  indexed_read_large_test.rs  indexed_read_test.rs  multi_chrom.bam  multi_chrom.bam.bai  multi_chrom_large.bam  multi_chrom_large.bam.bai  no_coor_only.bam  projection_pushdown_test.rs  rev_reads.bam  sam_read_test.rs  tag_tests.rs  write_test.rs
datafusion/bio-format-bbi/: Cargo.toml  README.md
datafusion/bio-format-bbi/src/: bigbed.rs  bigwig.rs  common.rs  lib.rs
datafusion/bio-format-bbi/tests/: provider_test.rs
datafusion/bio-format-bed/: Cargo.toml  README.md
datafusion/bio-format-bed/examples/: test_bed_reader.rs
datafusion/bio-format-bed/src/: async_reader.rs  lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-bed/tests/: coordinate_system_test.rs  coords.bed  multimember_gz_test.rs
datafusion/bio-format-core/: Cargo.toml
datafusion/bio-format-core/src/: alignment_utils.rs  calculated_tags.rs  genomic_filter.rs  index_utils.rs  lib.rs  metadata.rs  object_storage.rs  partition_balancer.rs  record_filter.rs  sam_record_serializer.rs  sam_tag_io.rs  table_utils.rs  tag_registry.rs
datafusion/bio-format-cram/: Cargo.toml  README.md
datafusion/bio-format-cram/examples/: debug_tags.rs  test_md_tag.rs  test_tag_discovery.rs  write_cram.rs
datafusion/bio-format-cram/src/: header_builder.rs  lib.rs  physical_exec.rs  serializer.rs  storage.rs  table_provider.rs  write_exec.rs  writer.rs
datafusion/bio-format-cram/tests/: indexed_read_10x_test.rs  indexed_read_large_test.rs  indexed_read_test.rs  multi_chrom.cram  multi_chrom.cram.crai  multi_chrom_10x.cram  multi_chrom_10x.cram.crai  multi_chrom_large.cram  multi_chrom_large.cram.crai  projection_pushdown_test.rs  tag_tests.rs
datafusion/bio-format-ensembl-cache/: Cargo.toml  README.md
datafusion/bio-format-ensembl-cache/docs/: vep-cache-storage-format-analysis.md
datafusion/bio-format-ensembl-cache/examples/: bench_regulatory.rs  bench_transcript.rs  bench_variation.rs  diag_transcript_memory.rs  storable_to_parquet.rs  transcript_to_parquet.rs  validate_variation_parquet.rs
datafusion/bio-format-ensembl-cache/src/: discovery.rs  entity.rs  errors.rs  exon.rs  export_query.rs  filter.rs  info.rs  lib.rs  physical_exec.rs  regulatory.rs  row.rs  schema.rs  source_type.rs  tabix_reader.rs  table_provider.rs  transcript.rs  translation.rs  util.rs  variation.rs
datafusion/bio-format-ensembl-cache/tests/: hgnc_propagation_tests.rs  integration_tests.rs  parquet_roundtrip_tests.rs  port_cache_dir.rs  real_vep_cache_tests.rs
datafusion/bio-format-fasta/: Cargo.toml  README.md
datafusion/bio-format-fasta/examples/: example.fasta  test_fasta_reader.rs  test_reader.rs
datafusion/bio-format-fasta/src/: lib.rs  physical_exec.rs  serializer.rs  storage.rs  table_provider.rs  write_exec.rs  writer.rs
datafusion/bio-format-fasta/tests/: multimember_gz_test.rs  read_test.rs  write_test.rs
datafusion/bio-format-fastq/: Cargo.toml  README.md  libparser.rlib
datafusion/bio-format-fastq/data/: gen_multimember_fixtures.py
datafusion/bio-format-fastq/examples/: parser_comparison.rs  performance_test.rs  projection_pushdown_demo.rs  test_fastq_reader.rs  test_parallel_reader.rs  test_reader.rs
datafusion/bio-format-fastq/src/: bgzf_parallel_reader.rs  lib.rs  needletail_storage.rs  parser.rs  physical_exec.rs  serializer.rs  storage.rs  table_provider.rs  write_exec.rs  writer.rs
datafusion/bio-format-fastq/tests/: bgzf_range_reading_test.rs  byte_range_test.rs  multimember_gz_test.rs  parallel_read_test.rs  parser_comparison_test.rs  projection_pushdown_test.rs  range_row_count_regression.rs  row_count_integration_test.rs  write_test.rs
datafusion/bio-format-gff/: Cargo.toml  README.md
datafusion/bio-format-gff/examples/: test_gff_reader.rs  test_reader.rs
datafusion/bio-format-gff/src/: bgzf_parallel_reader.rs  filter_utils.rs  lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-gff/tests/: attribute_projection_test.rs  both_providers_filter_test.rs  filter_pushdown_test.rs  indexed_read_10x_test.rs  indexed_read_large_test.rs  indexed_read_test.rs  multi_chrom.gff3.gz.tbi  multi_chrom_large.gff3.gz.tbi  multimember_gz_test.rs  projection_pushdown_test.rs
datafusion/bio-format-gtf/: Cargo.toml
datafusion/bio-format-gtf/examples/: test_gtf_reader.rs
datafusion/bio-format-gtf/src/: filter_utils.rs  lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-gtf/tests/: gencode_multi_tag.gtf  gtf_read_test.rs  multi_chrom.gtf.gz.tbi  multimember_gz_test.rs
datafusion/bio-format-pairs/: Cargo.toml  README.md
datafusion/bio-format-pairs/examples/: test_pairs_reader.rs
datafusion/bio-format-pairs/src/: filter_utils.rs  header.rs  lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-pairs/tests/: integration_tests.rs  multimember_gz_test.rs  test_small.pairs  test_spec.pairs  test_spec.pairs.gz.tbi
datafusion/bio-format-vcf/: Cargo.toml  README.md
datafusion/bio-format-vcf/examples/: bgzf_test.rs  datafusion_integration.rs  parallel_bgzf_example.rs
datafusion/bio-format-vcf/src/: bgzf_parallel_reader.rs  header_builder.rs  lib.rs  storage.rs  (+6 more)
datafusion/bio-format-vep-plugin/: Cargo.toml  README.md
(+2610 files in other folders)
