[package]
name = "datafusion-bio-benchmarks-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
sha2 = "0.10"
tokio = { version = "1.49", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
anyhow = "1.0"
indicatif = "0.17"
hex = "0.4"
dirs = "5.0"
