[package]
name = "datafusion-bio-format-bam"
version = "0.5.2"
description = "BAM file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles-bgzf = { git = "https://github.com/biodatageeks/noodles.git", rev = "e2b53501afd9d327735355db68dfb33d3e6ce9db", features = ["libdeflate"] }
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
noodles-bam = { git = "https://github.com/biodatageeks/noodles.git", rev = "e2b53501afd9d327735355db68dfb33d3e6ce9db", features = ["async"] }
noodles-sam.workspace = true
async-stream = "0.3.6"
log = "0.4.27"
async-trait = "0.1.88"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
noodles-core = { git = "https://github.com/biodatageeks/noodles.git", rev = "e2b53501afd9d327735355db68dfb33d3e6ce9db" }
noodles-csi = { git = "https://github.com/biodatageeks/noodles.git", rev = "e2b53501afd9d327735355db68dfb33d3e6ce9db" }

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "test_bam_reader"
path = "./examples/test_bam_reader.rs"

[[example]]
name = "test_bam_with_tags"
path = "./examples/test_bam_with_tags.rs"

[[example]]
name = "describe_bam_schema"
path = "./examples/describe_bam_schema.rs"

[[example]]
name = "benchmark_read"
path = "./examples/benchmark_read.rs"
