[package]
name = "datafusion-bio-format-bbi"
version = "1.6.3"
description = "BigWig and BigBed file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
async-trait.workspace = true
datafusion-bio-format-core = { path = "../bio-format-core" }
bigtools = { version = "0.5.8", default-features = false, features = ["read"] }
futures-util.workspace = true

[dev-dependencies]
bigtools = { version = "0.5.8", default-features = false, features = ["read", "write"] }
tempfile = "3"
tokio.workspace = true
