[package]
name = "datafusion-bio-format-bed"
version = "0.1.1"
description = "BED file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
async-compression.workspace = true
futures = "0.3.31"
log = "0.4.28"
async-stream = "0.3.6"
env_logger = "0.11.8"
noodles-bed = "0.26.0"
futures-util = "0.3.31"

[[example]]
name = "test_bed_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_bed_reader.rs"
