[package]
name = "datafusion-bio-format-core"
version = "0.1.1"
description = "Core utilities for DataFusion bioinformatics table providers"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion-execution.workspace = true
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
log = "0.4.27"
url = "2.5.4"
async-compression = "0.4.19"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
