[package]
name = "datafusion-bio-format-core"
version = "1.7.0"
description = "Core utilities for DataFusion bioinformatics table providers"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion-execution.workspace = true
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
noodles-core = { git = "https://github.com/biodatageeks/noodles.git", rev = "e2b53501afd9d327735355db68dfb33d3e6ce9db" }
noodles-sam.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
log = "0.4.27"
url = "2.5.4"
async-compression = { version = "0.4.19", features = ["gzip", "tokio"] }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
