[package]
name = "datafusion-bio-format-cram"
version = "0.5.3"
description = "CRAM file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
noodles-cram.workspace = true
noodles-sam.workspace = true
noodles-fasta.workspace = true
async-stream = "0.3.6"
log = "0.4.27"
async-trait = "0.1.88"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
noodles-core = { git = "https://github.com/biodatageeks/noodles.git", rev = "da905fff4909ada93e407c780456332fe113858b" }

[dev-dependencies]
tempfile = "3.26"
datafusion-bio-format-bam = { path = "../bio-format-bam" }
