[package]
name = "datafusion-bio-format-ensembl-cache"
version = "0.1.0"
description = "Ensembl VEP cache TableProvider support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
datafusion-bio-format-core = { path = "../bio-format-core" }
flate2.workspace = true
serde_json.workspace = true
tokio.workspace = true
log = "0.4.27"

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
hex = "0.4"
