[package]
name = "datafusion-bio-format-ensembl-cache"
version = "1.1.0"
description = "Ensembl VEP cache TableProvider support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
datafusion-bio-format-core = { path = "../bio-format-core" }
flate2.workspace = true
noodles-bgzf = { workspace = true }
noodles-tabix = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-csi = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
serde_json.workspace = true
tokio.workspace = true
log = "0.4.27"

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
hex = "0.4"
tempfile = "3"
