[package]
name = "datafusion-bio-format-fasta"
version = "0.5.0"
description = "FASTA file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
noodles-fasta= { git = "https://github.com/biodatageeks/noodles.git",rev = "289ef32e7d43d142914fb3f02335044ae293871c", features = ["async"] }
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream.workspace = true
log = "0.4.27"
async-trait = "0.1.81"
