[package]
name = "datafusion-bio-format-fasta"
version = "1.3.0"
description = "FASTA file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
noodles-fasta.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream.workspace = true
flate2.workspace = true
bstr.workspace = true
log = "0.4.27"
async-trait = "0.1.81"

[dev-dependencies]
tempfile = "3"
