[package]
name = "datafusion-bio-format-fastq"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
noodles-fastq = {version = "0.19.0", features = ["async"]}
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream = "0.3.6"
log = { version = "0.4.27", features = ["release_max_level_debug"] }
async-trait = "0.1.88"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
needletail = {git = "https://github.com/biodatageeks/needletail.git", rev = "3633dc3c6dcbc5cac106a81cf6ed1c7fa1776baf"}

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "test_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_reader.rs"

[[example]]
name = "parser_comparison"
path = "./examples/parser_comparison.rs"