[package]
name = "datafusion-bio-format-fastq"
version = "0.4.0"
description = "FASTQ file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
noodles-fastq = {version = "0.19.0", features = ["async"]}
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream = "0.3.6"
log = { version = "0.4.27", features = ["release_max_level_debug"] }
async-trait = "0.1.88"
flate2 = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "test_fastq_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_fastq_reader.rs"
