[package]
name = "datafusion-bio-format-gff"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
tokio-util.workspace = true
noodles = { workspace = true }
tokio.workspace = true
bytes.workspace = true
async-compression.workspace = true
async-stream.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true

noodles-gff  = { git = "https://github.com/biodatageeks/noodles.git",rev = "f97c310f9b7791427c59069cdd86f98c915cd553", features = ["async"] }
flate2 = "1.0"
log = "0.4.27"
env_logger = "0.11.8"

[[example]]
name = "test_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_reader.rs"