[package]
name = "datafusion-bio-format-gff"
version = "0.1.1"
description = "GFF file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
tokio-util.workspace = true
noodles = { workspace = true }
noodles-bgzf.workspace = true
tokio.workspace = true
bytes.workspace = true
async-compression.workspace = true
async-stream.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true

noodles-gff  = { git = "https://github.com/biodatageeks/noodles.git",rev = "9b7b2c5b6531373918302d4c07410e583f1b5b5c", features = ["async"] }
flate2 = "1.0"
log = "0.4.29"
env_logger = "0.11.8"
tracing = "0.1.40"

[[example]]
name = "test_gff_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_gff_reader.rs"
