[package]
name = "datafusion-bio-format-gff"
version = "1.1.0"
description = "GFF file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
tokio-util.workspace = true
noodles = { workspace = true }
noodles-bgzf.workspace = true
tokio.workspace = true
bytes.workspace = true
async-compression.workspace = true
async-stream.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true

noodles-gff  = { git = "https://github.com/biodatageeks/noodles.git",rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1", features = ["async"] }
noodles-tabix = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-core = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-csi = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-bgzf-gff = { package = "noodles-bgzf", git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1", features = ["libdeflate"] }
flate2.workspace = true
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1.40"

[[example]]
name = "test_gff_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_gff_reader.rs"
