[package]
name = "datafusion-bio-format-gtf"
version = "0.5.4"
description = "GTF file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
tokio.workspace = true
async-stream.workspace = true
datafusion-bio-format-core = { path = "../bio-format-core" }
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
flate2.workspace = true
noodles-bgzf.workspace = true
noodles-bgzf-gtf = { package = "noodles-bgzf", git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1", features = ["libdeflate"] }
noodles-tabix = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-core = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
noodles-csi = { git = "https://github.com/biodatageeks/noodles.git", rev = "086061d2ff5385f63a5bf0c500ebebb84a153af1" }
opendal.workspace = true
tokio-util.workspace = true
bytes.workspace = true
async-compression.workspace = true
log.workspace = true

[[example]]
name = "test_gtf_reader"
path = "./examples/test_gtf_reader.rs"
