[package]
name = "datafusion-bio-format-vcf"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
opendal.workspace = true
noodles-vcf = { git = "https://github.com/biodatageeks/noodles.git",rev = "533a9f181c2fd60ad13da0febe23446543387b38", features = ["async"] }
noodles-bgzf = { workspace = true }
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
async-compression.workspace = true

datafusion-bio-format-core = {path = "../bio-format-core"}

log = "0.4.22"
env_logger = "0.11.6"


[[example]]
name = "datafusion_integration"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration.rs"