[package]
name = "datafusion-bio-format-vcf"
version = "0.1.0"
description = "VCF file format support for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
opendal.workspace = true
noodles-vcf = { git = "https://github.com/biodatageeks/noodles.git",rev = "9b7b2c5b6531373918302d4c07410e583f1b5b5c", features = ["async"] }
noodles = { git = "https://github.com/biodatageeks/noodles.git",rev = "9b7b2c5b6531373918302d4c07410e583f1b5b5c", features = ["vcf", "bgzf"] }
noodles-bgzf = { workspace = true }
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
async-compression.workspace = true

datafusion-bio-format-core = {path = "../bio-format-core"}

log = "0.4.22"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.0"


[[example]]
name = "datafusion_integration"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration.rs"